<resources>
    <string name="title_home">Rockets</string>
    <string name="title_dashboard">Launches</string>
    <string name="title_notifications">Launchpads</string>
    <string name="app_name">SpaceX</string>
    <string name="imagerocket">ImageRocket</string>
    <string name="first_launch">First Launch</string>
    <string name="launch_cost">Launch Cost</string>
    <string name="success">Success</string>
    <string name="mass">Mass</string>
    <string name="height">Height</string>
    <string name="diameter">Diameter</string>
    <string name="images">Images</string>
    <string name="engines">Engines</string>
    <string name="type">Type</string>
    <string name="layout">Layout</string>
    <string name="version">Version</string>
    <string name="amount">Amount</string>
    <string name="propellant1">Propellant 1</string>
    <string name="propellant2">Propellant 2</string>
    <string name="first_stage">First stage</string>
    <string name="reusable">Reusable</string>
    <string name="engines_amount">Engines amount</string>
    <string name="fuel_amount">Fuel amount</string>
    <string name="burning_time">Burning Time</string>
    <string name="thrust">Thrust</string>
    <string name="thrust_sea_level">Thrust (sea level)</string>
    <string name="thrust_vacuum">Thrust (vacuum)</string>
    <string name="second_stage">Second stage</string>
    <string name="materials">Materials</string>
    <string name="landing_legs">Landing legs</string>
    <string name="material">Material</string>
    <string name="rocket">Rocket</string>
    <string name="static_fire_date">Static fire date</string>
    <string name="launch_date">Launch date</string>
    <string name="youtube">YouTube</string>
    <string name="reddit">Reddit</string>
    <string name="recovery">Recovery</string>
    <string name="media">Media</string>
    <string name="campaign">Campaign</string>
    <string name="launch">Launch</string>
    <string name="overview">Overview</string>
    <string name="region">Region</string>
    <string name="launch_attempts">Launch attempts</string>
    <string name="launch_success">Launch success</string>
    <string name="location">Location</string>
    <string name="active">Active</string>
    <string name="retired">Retired</string>
    <string name="success_rate">Success rate</string>
    <string name="choose_your_option">Choose your option:</string>
    <string name="access">Access</string>
    <string name="cancel">Cancel</string>
    <string name="rockets_filter">Rockets filter</string>
    <string name="launches_filter">Launches filter</string>
    <string name="launchpads_filter">Launchpads filter</string>
    <string name="future">Future</string>
    <string name="past">Past</string>
    <string name="all">All</string>
</resources>