<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.spacex.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_rocket"
            app:destination="@id/navigation_rocket" />
    </fragment>

    <fragment
        android:id="@+id/navigation_launches"
        android:name="com.example.spacex.presentation.launches.LaunchesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_launches" >
    </fragment>

    <fragment
        android:id="@+id/navigation_rocket"
        android:name="com.example.spacex.presentation.rocket.RocketFragment"
        android:label="@string/rocket"
        tools:layout="@layout/fragment_rocket" >

        <argument
            android:name="item"
            app:argType="com.example.spacex.domain.ui_model.UiRocket" />

        <action
            android:id="@+id/action_navigation_rocket_to_navigation_web"
            app:destination="@id/navigation_web" />
    </fragment>

    <fragment
        android:id="@+id/navigation_web"
        android:name="com.example.spacex.presentation.web_view.WebFragment"
        android:label="Wikipedia"
        tools:layout="@layout/fragment_web" >

        <argument
            android:name="address"
            app:argType="string" />

        <action
            android:id="@+id/action_navigation_web_to_navigation_rocket"
            app:destination="@id/navigation_rocket" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.spacex.presentation.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>