<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".presentation.launches.LaunchesFragment">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/launchesFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/allRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_segmented_left"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/all"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/pastRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_segmented_center"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/past"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/futureRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_segmented_right"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/future"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/launchRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/launchesFilter"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_arrow_up_arrow_down"
        android:contentDescription="@string/launches_filter"
        app:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/launchRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>