<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".presentation.rocket.RocketFragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="414dp"
                android:layout_height="2081dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/image" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="124dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="270dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Description"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/descript"
                    android:layout_width="314dp"
                    android:layout_height="114dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="124dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="270dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Overview"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/FirstLaunchText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="51dp"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="5dp"
                        android:text="@string/first_launch"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/firstLaunchRes"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/LauncCostText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="51dp"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="5dp"
                        android:text="@string/launch_cost"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/launchCostRes"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/SuccessText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="51dp"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="5dp"
                        android:text="@string/success"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/successRes"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/MassText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="51dp"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="5dp"
                        android:text="@string/mass"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/massRes"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/HeightText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="51dp"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="5dp"
                        android:text="@string/height"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/heightRes"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/DiameterText"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="51dp"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="5dp"
                        android:text="@string/diameter"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/diameterRes"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif"
                        android:paddingBottom="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>
                <TextView
                    android:id="@+id/images"
                    android:layout_width="124dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="270dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/images"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/imageRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>